fix: center health columns

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -733,6 +733,10 @@
   word-break: break-word;
 }
 
+.aoCellCenter {
+  text-align: center;
+}
+
 .aoTable {
   width: 100%;
   border-collapse: separate;
